# spearmint

./: .clang-tidy  CMakeLists.txt  framework.json
cmake/: spearmint-config.cmake.in
demos/: CMakeLists.txt  demo_phase1_tokens.cpp  demo_phase2_styles.cpp  demo_phase3_lexer.cpp  demo_phase4_exporters.cpp  scat.cpp
include/spearmint/: exports.h  spearmint.h
include/spearmint/core/: lexer.h  lexer_registry.h  regex_lexer.h  style.h  style_registry.h  token.h  token_stream.h
include/spearmint/detail/: constexpr_map.h  string_utils.h
include/spearmint/exporters/: ansi.h  exporter.h  html.h  latex.h  svg.h
include/spearmint/filters/: builtin_filters.h  filter.h
include/spearmint/lexers/: bash.h  cpp.h  csharp.h  css.h  dockerfile.h  ftl.h  go.h  html.h  ini.h  java.h  javascript.h  json.h  kotlin.h  lua.h  makefile.h  markdown.h  php.h  python.h  ruby.h  rust.h  sql.h  swift.h  toml.h  typescript.h  xml.h  yaml.h
include/spearmint/styles/: builtin.h
src/core/: lexer.cpp  regex_lexer.cpp  spearmint.cpp
src/exporters/: ansi.cpp  html.cpp  latex.cpp  svg.cpp
src/filters/: builtin_filters.cpp
src/lexers/: bash.cpp  cpp.cpp  csharp.cpp  css.cpp  dockerfile.cpp  ftl.cpp  go.cpp  html_lexer.cpp  ini.cpp  java.cpp  javascript.cpp  json.cpp  kotlin.cpp  lexer_registry.cpp  lua.cpp  makefile.cpp  markdown.cpp  php.cpp  python.cpp  ruby.cpp  rust.cpp  sql.cpp  swift.cpp  toml.cpp  typescript.cpp  xml.cpp  yaml.cpp
src/styles/: style_registry.cpp
tests/: CMakeLists.txt  constexpr_map_test.cpp  exporter_test.cpp  filter_test.cpp  ftl_lexer_test.cpp  lexer_all_languages_test.cpp  lexer_multi_test.cpp  lexer_test.cpp  style_test.cpp  token_test.cpp
